css/styles.css
/* fonts:
cirkabold
cirkalight
cirkaregular
hattonbold
hattonlight
hattonmedium
hattonultrabold
hattonultralight
hattonregular
neue_worldsuperCnLt
argesta_textregular_italic
argesta_textbold
argesta_textregular
argesta_displayregular_italic
argesta_displayregular
argesta_headlineRgIt
argesta_headlineregular
argesta_hairlineregular
argesta_hairlineRgIt
*/

html, body {
	margin: 0;
	padding: 0;
	width: 100%;
	/*box-sizing: border-box;*/
	-webkit-font-smoothing: antialiased;

}

.body-contact {

}

.body::after {
	content: "";
  background: url("../images/billie-holiday.png");
  opacity: 0.5;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
  z-index: -1;
}

.footer{

}
h1 {
	font-size: 3rem;
	line-height: 3.5rem;
	font-family: hattonultrabold;
}

h2 {
	font-size: 1.5em;
	font-family: 'argesta_hairlineregular';
	margin-bottom:1rem;
	margin-top:1rem;
	color: rgb(112, 124, 145);
}

h3 {
	font-size: 24px;
	padding-left: 0px;
	text-align: left;
}

header {
			font-family: "helvetica Neue", sans-serif;
			font-weight: normal;
      width: 100%;
			height: 100px;
}

background {
			width: 100%
			height: 300px;
}

.spaceMode {
	margin-left: 30rem;
	margin-right: 30rem;
	position:static;
}

.wrapper {
	padding-bottom:100px;
	background-color: blue;
	background-color: rgb(179, 46, 90);
	font-family: "cirkalight";
	background-repeat:round;
	display: block;
	position: relative;
}

.wrapper-work {
	background-color: rgb(65, 191, 145);
}

.wrapper-contact {
	background-color: rgb(38,99,120);
}

.home {
	background-image: url("../images/beige-paper.jpeg");
	background-size: 200px;
	margin-left: 15rem;
	margin-right: 15rem;
	margin-top: 10rem;
	margin-bottom: 10rem;
	box-shadow: 0px 26px 6px 0px rgba(0,0,0,0.22);
	padding-top: 5%;
	/* Background Color */
}


/*											CONTACT FORM 								*/

.contactRow {
	display:flex;
}

.contactColumn1 {
	flex:50%;
}

.contactColumn2 {
	flex:50%;
}

.postCardFront {
	background-image: url("../images/beige-paper.jpeg");
	background-size: 200px;
	height:400px;
	width:732px;
	margin-left: 25%;
	margin-right: 25%;
	margin-bottom: 1rem;
	margin-top: 1rem;
	box-shadow: 0px 26px 6px 0px rgba(0,0,0,0.22);
}

.postCardBack {
	background-image: url("../images/beige-paper.jpeg");
	background-size: 200px;
	height:400px;
	width:732px;
	margin-left: 25%;
	margin-right: 25%;
	margin-bottom: 1rem;
	margin-top: 1rem;
	box-shadow: 0px 26px 6px 0px rgba(0,0,0,0.22);
	display:flex;
}

.postCardBackLeft {
	flex: 50%;
	margin-top: 10%;
	margin-bottom:10%;
	border-right-color: black;
	border-right-style: ridge;
}

.postCardMessage {
	margin-left: 10%;
	margin-right:10%;
	margin-top:1rem;
}

.postCardBackRight {
	flex: 50%;
	margin-top: 10%;
	margin-bottom:10%;
}

textarea {
  height: 100%;
	width: 80%;
  box-sizing: border-box;
  border: 2px solid #ccc;
  border-radius: 4px;
  resize: none;
	margin-left:10%;
	margin-right:10%;
}

input {
	width:100%;
	line-height:1rem;
	margin-left: 5%;
}


.line {
	width: 11x;
	height: 200px;
	border-bottom: 1px solid black;
	position: absolute;
	align-items:center;
}

.tagline {
  margin-right: auto;
	margin-left: auto;
  padding-top: 16px;
	padding-left: 20px;
	padding-right: 20px;
  -webkit-transform: rotate(-7deg);
  -ms-transform: rotate(-7deg);
  transform: rotate(-7deg);
  font-family: 'hattonultrabold';
  font-size: 12vw;
  line-height: .75em;
  font-style: italic;
  font-weight: 700;
  text-align: center;
  letter-spacing: -.06em;
	width:75%;
}

.rainbow {
	background: linear-gradient(225deg, #FE7474 10%, rgb(255, 178, 83) 27%, rgb(161, 255, 126) 43%, rgb(120, 187, 255) 66%, rgb(255, 99, 182)80%, #FE7474 100%);
	-webkit-background-clip: text;
	background-clip: text;
	color: transparent;
	animation: rainbow_animation 20s linear infinite;
	background-size: 400% auto;
}

.footerText{
	padding-top:5rem;
	margin-bottom:1rem;
	font-family:"basier_squareregular";
	font-size:0.75rem;
	align-items: center;
	justify-content: center;
	color: rgb(112, 124, 145);
}

.description{
	font-family: "argesta_headlineRgIt";
	font-size: 1rem;
	font-style: normal;
	line-height: 3rem;
	text-align: center;
	display:block;
	margin-bottom:0;
	color: rgb(112, 124, 145);
}

.letterBody{
	font-family: "basier_squareregular";
	font-weight: normal;
	font-size: 0.75rem;
	line-height: 1.5rem;
	margin-top:0px;
	color: rgb(112, 124, 145);
}

.salutations{
	font-family: "basier_squareregular";
	font-weight: normal;
	font-size: 0.75rem;
	line-height: 1em;
	margin-top:0px;
	color: rgb(112, 124, 145);
}

.signature{
	margin-top:0px;
	font-family: 'hattonultralight';
	font-size: 18px;
}

.animation {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 160px;
  overflow:hidden;
  font-size: 35px;
  line-height: 40px;

  &__container {
  	font-weight: 600;
		overflow: hidden;
		height: 40px;
  }

}

.topCard{

}

@media(max-width: 875px) {
	.topCard {
	}

}

.cards {
	align-items: center;
	padding-left: 25%;
	padding-right: 25%;
	margin-left: auto;
	margin-top:auto;
	margin-right: auto;
}

.cards-work {
	background-image: url("../images/beige-paper.jpeg");
	background-size: 200px;
	padding-left: 0;
	padding-right: 0;
	/* display: grid; */
	/*  align-self: center; */
	margin-left: 10%;
	margin-right: 10%;
}
.cards-contact {
	background-image: url("../images/beige-paper.jpeg");
	background-size: 200px;

	/* display: grid; */
	/*  align-self: center; */
}

.contact {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	margin: 0px;
	padding: 0px;
	box-sizing: border-box;
}

.wrap-contact100 {
  width: 500px;
	box-shadow: 0px 3px 15px -9px #000000;
  background: #fbf7f7;
  border-radius: 10px;
  overflow: hidden;
  padding: 42px 55px 45px 55px;
}

.contact100-form {
  width: 100%;
}

.contact100-form-title {
  display: block;
  font-family: Helvetica;
  font-size: 39px;
  color: #333333;
  line-height: 1.2;
  text-align: center;
  padding-bottom: 44px;
}
/* ... */

